# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.762.2.25 2008-11-16 16:10:17 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.4 (2008/??/??)
 - (2008/11/16) Fixed bug# 3461 - It's not possible to past an email into a
    note screen, only 70 signs are possible for each line, it should be
    increased to 78.
 - (2008/11/14) Fixed bug# 3459 - Ticket in state "pending" are not escalating
    but shown in escalation overview with incorect timestamp calculation
    (34512 days).
 - (2008/11/10) Fixed bug# 3213 - Make rpc.pl work when using ModPerl.
 - (2008/11/10) Fixed bug# 3442 - HTML2Ascii is ignoring spaces on email
    processing.
 - (2008/11/07) Fixed bug# 2730 - Sending mails to MS Exchange Server 2007
    fails sometimes with "Bad file descriptor!".
 - (2008/11/01) Fixed bug# 3207 - Expanded articles in wrong order.
 - (2008/10/30) Fixed bug# 2071 - Dead link to online documentation in admin
    interface (AdminState).
 - (2008/10/29) Fixed bug# 3244 - "Defination"-Typo in Defaults.pm.
 - (2008/10/29) Fixed bug# 2736 - AdminUser&Subaction=Change - Valid is
    automatically changed
 - (2008/10/29) Fixed bug# 2710 - Error: Module 'Kernel::Modules::' not found!
 - (2008/10/28) Fixed bug# 3402 - AgentLinkObject crashes with "Got no
    UserLanguage" if browser sends exotic language.
 - (2008/10/28) Fixed bug# 3405 - Input field agent-email-address too short.
 - (2008/10/28) Fixed bug# 1719 - psql -u deprecated.
 - (2008/10/28) Fixed bug# 3366 - TicketEvent ArticleFreeTextSet does not know
    ArticleID.
 - (2008/10/28) Fixed bug# 3346 - improved error logging of new postmaster
    tickets for invalid priority names.
 - (2008/10/28) Fixed bug# 3376 - GenericAgent: A warning like "you have to set